[gd_scene load_steps=2 format=3 uid="uid://ddefmugktqup"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/MagicSection/MagicItem.gd" id="1_l34t1"]

[node name="MagicItem" type="MarginContainer"]
custom_minimum_size = Vector2(245, 75)
script = ExtResource("1_l34t1")
Nr = 3

[node name="MagicButton" type="Button" parent="."]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="MagicButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="MagicButton/MC"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MagicButton/MC/VBox"]
layout_mode = 2
size_flags_vertical = 6
text = "Double Trouble"

[node name="CostLabel" type="Label" parent="MagicButton/MC/VBox"]
layout_mode = 2
size_flags_vertical = 6
text = "2 Magic"
horizontal_alignment = 2
vertical_alignment = 2

[node name="CantAffordColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.513726, 0.0941176, 0, 0.301961)

[connection signal="button_down" from="MagicButton" to="." method="_on_magic_button_button_down"]
